<resources>
    <string name="app_name">BLESample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Tabs Names -->
    <string name="connection">Connection</string>
    <string name="data_communication">Data Communication</string>

    <!-- Dialog -->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_gps_title">Location</string>
    <string name="dialog_gps_msg">Location is supposed to be enabled to use BLE. Please enable Location on settings.</string>
    <string name="dialog_connection_title">Connection</string>
    <string name="dialog_connection_msg">Do you want to connect with %1$s?</string>
    <string name="dialog_not_connected">Please connect with</string>

    <!-- Connection Fragment -->
    <string name="ble_connected_device">BLE connected device</string>
    <string name="ble_available_devices">BLE available devices</string>
    <string name="ble_start_search_devices">Start Search</string>
    <string name="ble_stop_search_devices">Stop Search</string>
    <string name="unknown">unknown</string>

    <string name="central">central</string>
    <string name="peripheral">peripheral</string>
    <string name="send">send</string>
    <string name="close">close</string>
    <string name="write">write</string>
    <string name="read">read</string>
    <string name="notify">notify</string>
    <string name="disconnect">disconnect</string>
    <string name="clear">clear</string>
    <string name="ble_not_supported">BLE not supported.</string>

    <!--Permission-->
    <string name="check_is_ble_support">Check BLE Support</string>
    <string name="ble_not_support">BLE not supported for this device</string>

    <string-array name="tabs_names">
        <item>@string/connection</item>
        <item>@string/data_communication</item>
    </string-array>

</resources>