<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/central"
        android:layout_alignParentTop="true"
        android:theme="@style/black_bold_18_font"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_contents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="contents"
        android:layout_above="@+id/linear_buttons"
        android:layout_below="@+id/tv_title"
        android:padding="20dp"/>

    <LinearLayout
        android:id="@+id/linear_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send"
            android:padding="10dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/close"
            android:padding="10dp"/>
    </LinearLayout>

</RelativeLayout>